cmake_minimum_required(VERSION 3.26)
project(P1_GodburnArjun)

set(CMAKE_CXX_STANDARD 20)

add_executable(P1_GodburnArjun
        main.cpp
        Dice.cpp
        tools.cpp
        Enums.cpp
        Enums.hpp
        Player.cpp
        Player.hpp
        column.cpp
        column.hpp
        game.cpp
        game.hpp
        board.cpp
        board.hpp)